Fix oversized headings on mobile

--- a/app/styles/view-specific/information/_all.scss
+++ b/app/styles/view-specific/information/_all.scss
@@ -379,17 +379,25 @@ $html-name-space:'.info-page';
     }
     h1 {
       font-weight: 900;
-      font-size: 46px;
+      font-size: 40px;
       letter-spacing: -0.5px;
       margin:0;
       padding: 0 0 16px 0; /* Compensate for implicit top padding introduced by line height */
 
+      @media (min-width:$screen-ss-min) {
+        font-size: 46px;
+      }
+
       &.large {
-        font-size: 52px;
+        font-size: 45px;
         font-family: 'Open Sans', sans-serif;
         font-weight: 700;
         letter-spacing: -2px;
         padding-bottom: 23px;
+
+        @media (min-width:$screen-ss-min) {
+          font-size: 52px;
+        }
       }
       &.long {
         margin: 0 0 7px 0;
@@ -437,10 +445,13 @@ $html-name-space:'.info-page';
       }
     }
     h2.sub-heading, h2.sub-heading-long {
-      font-size: 24px;
+      font-size: 22px;
       font-weight: normal;
       margin-top: 0;
       padding-top: 0;
+      @media (min-width:$screen-ss-min) {
+        font-size: 24px;
+      }
     }
     h2.sub-heading {
       margin-bottom: 20px;
@@ -668,16 +679,25 @@ $html-name-space:'.info-page';
   }
 
   .info-page-box-extra-padding-2 {
-    padding-top: 45px;
-    padding-bottom: 65px;
+    padding-top: 0;
+    padding-bottom: 0;
+    @media (min-width: $screen-ss-min) {
+      padding-top: 45px;
+      padding-bottom: 65px;
+    }
     .info-page-button {
       margin-top: 10px;
     }
   }
 
   .info-page-box-extra-padding-3 {
-    padding-top: 90px;
-    padding-bottom: 60px;
+    padding-top: 20px;
+    padding-bottom: 40px;
+    @media (min-width: $screen-ss-min) {
+      padding-top: 90px;
+      padding-bottom: 60px;
+    }
+
     .info-page-button {
       margin-top: 30px;
     }
@@ -758,7 +778,10 @@ $html-name-space:'.info-page';
     li {
       margin-bottom: 0;
       display: inline-block;
-      margin-right: 55px;
+      margin-right: 35px;
+      @media (min-width:$screen-ss-min) {
+        margin-right: 55px;
+      }
       &:last-child {
         margin-right: 0;
       }
